# blockprotocol-incubator

./: LICENSE.md  README.md
.github/: renovate.json
apps/blok/: Cargo.toml  README.md  rust-toolchain.toml
apps/blok/examples/: tsconfig.json
apps/blok/examples/email/: blokconfig.json5
apps/blok/examples/email/properties/: fullEmail.blok  fullEmail.blok.d.ts  primaryEmail.blok  primaryEmail.blok.d.ts  secondaryEmail.blok
apps/blok/examples/person/: blokconfig.json5
apps/blok/examples/person/entities/: employedBy.blok  employedBy.blok.d.ts  person.blok
apps/blok/examples/person/properties/: email.blok  firstName.blok  name.blok
apps/blok/lib/ast/: Cargo.toml
apps/blok/lib/ast/src/: lib.rs
apps/blok/lib/dummy/: Cargo.toml
apps/blok/lib/parser/: Cargo.toml
apps/blok/lib/parser/src/: cst.rs  error.rs  lib.rs
apps/blok/lib/shared/: Cargo.toml
apps/blok/lib/shared/src/: polyfill.rs
apps/blok/types/@std/: conditions.d.ts  data.d.ts  types.d.ts
libs/turbine/: Cargo.toml  rust-toolchain.toml
libs/turbine-transformer/: Cargo.toml  README.md  rust-toolchain.toml
libs/turbine-transformer/src/: lib.rs  mutate.rs  path.rs  property.rs  reachable.rs  select.rs
libs/turbine-transformer/src/property/: select.rs  update.rs
libs/turbine-transformer/src/select/: clause.rs  dynamic.rs  path.rs  property.rs  type_.rs  value.rs
libs/turbine/lib/codegen/: Cargo.toml
libs/turbine/lib/codegen/src/: analysis.rs  entity.rs  lib.rs  name.rs  property.rs  shared.rs  utilities.rs
libs/turbine/lib/codegen/src/analysis/: facts.rs  unify.rs
libs/turbine/lib/codegen/src/property/: inner.rs  property_value.rs  type_.rs
libs/turbine/lib/codegen/tests/: test_snapshots.rs
libs/turbine/lib/codegen/tests/snapshots/: 01-property-type-ref.stdout  02-property-type-oneOf-data-type.stdout  03-property-type-object.stdout  04-property-type-array.stdout  05-property-type-oneOf-array.stdout  06-property-type-self-referential.stdout  07-property-type-object-nested.stdout  08-entity-type-empty.stdout  09-entity-type-single-property.stdout  10-entity-type-single-property-optional.stdout  11-entity-type-multiple-properties.stdout  12-entity-multiple-versions.stdout  13-entity-duplicate-identifier.stdout  14-entity-properties-clash.stdout  15-entity-link.stdout  17-property-type-multiple-versions.stdout  18-property-type-data-type-clash.stdout  19-property-type-inner-type-name.stdout
libs/turbine/lib/skeletor/: Cargo.toml
libs/turbine/lib/skeletor/src/: cargo.rs  lib.rs  vfs.rs
libs/turbine/lib/turbine/: Cargo.toml
libs/turbine/lib/turbine/src/: entity.rs  error.rs  hierarchy.rs  lib.rs  path.rs  polyfill.rs
libs/turbine/lib/turbine/src/entity/: interval.rs
libs/turbine/lib/turbine/src/types/: data.rs
libs/turbine/lib/turbine/src/types/data/: boolean.rs  empty_list.rs  null.rs  number.rs  object.rs  text.rs
turbine/: README.md
turbine/lib/blockprotocol/: Cargo.toml
turbine/lib/blockprotocol/src/: entity.rs  error.rs  lib.rs  polyfill.rs
turbine/lib/blockprotocol/src/types/: data.rs
turbine/lib/blockprotocol/src/types/data/: boolean.rs  empty_list.rs  null.rs  number.rs  object.rs  text.rs
turbine/lib/codegen/: Cargo.toml
turbine/lib/codegen/src/: analysis.rs  data.rs  entity.rs  graph.rs  lib.rs  name.rs  property.rs  shared.rs
turbine/lib/codegen/src/property/: inner.rs  property_value.rs  type_.rs
turbine/lib/codegen/tests/: test_snapshots.rs
turbine/lib/codegen/tests/snapshots/: 01-property-type-ref.stdout  02-property-type-oneOf-data-type.json  02-property-type-oneOf-data-type.stdout  03-property-type-object.json  03-property-type-object.stdout  04-property-type-array.json  04-property-type-array.stdout  05-property-type-oneOf-array.stdout  06-property-type-self-referential.json  06-property-type-self-referential.stdout  07-property-type-object-nested.stdout  08-entity-type-empty.stdout  09-entity-type-single-property.json  09-entity-type-single-property.stdout  10-entity-type-single-property-optional.json  10-entity-type-single-property-optional.stdout  11-entity-type-multiple-properties.stdout  12-entity-multiple-versions.stdout  13-entity-duplicate-identifier.stdout  14-entity-properties-clash.stdout  15-entity-link.stdout  17-property-type-multiple-versions.stdout  18-property-type-data-type-clash.stdout  19-property-type-inner-type-name.stdout
turbine/lib/codegen/tests/snapshots/disabled/: 01-property-type-ref.json  05-property-type-oneOf-array.json  07-property-type-object-nested.json  11-entity-type-multiple-properties.json
turbine/lib/skeletor/: Cargo.toml
turbine/lib/skeletor/src/: lib.rs  vfs.rs
turbine/lib/turbine/src/: entity.rs  lib.rs  serialize.rs
turbine/lib/turbine/src/types/data/: boolean.rs  empty_list.rs  null.rs  number.rs  object.rs  text.rs
