[workspace]
resolver = "2"
members = ["lib/*", "bin/*"]
default-members = ["bin/cli"]

[workspace.package]
description = "A DSL for writing Block-Protocol types"
readme = "README.md"
version = "0.0.0"
edition = "2021"
authors = ["Bilal Mahmoud"]
publish = false

[workspace.dependencies]
swc_ecma_parser = "0.137.9"
swc_ecma_ast = "0.107.4"
swc_common = "0.31.18"

error-stack = "0.3.1"
thiserror = "1.0.44"

[profile.production]
inherits = "release"
lto = "fat"
strip = "symbols"
