[workspace]
resolver = "2"
members = ["lib/*", "bin/*"]
default-members = ["bin/cli"]

[workspace.package]
description = "The Blockprotocol Rust Type Generator"
readme = "README.md"
version = "0.0.0"
edition = "2021"
authors = ["Bilal Mahmoud"]
publish = false

[workspace.dependencies]
error-stack = { git = "https://github.com/hashintel/hash.git", rev = "c582a04", default-features = false }

[profile.production]
inherits = "release"
lto = "fat"
strip = "symbols"
