[package]
name = "blockprotocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.96"
error-stack = "0.3.1"

type-system = { git = "https://github.com/blockprotocol/blockprotocol", rev = "542836" }
