[package]
name = "blockprotocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.160", features = ['derive'] }
serde_json = "1.0.96"
error-stack = "0.3.1"
onlyerror = { version = "0.1.2", default-features = false }
time = { version = "0.3.20", features = ['serde'] }
hashbrown = { version = "0.13.2", features = ['serde'] }
uuid = { version = "1.3.1", features = ['serde'] }

type-system = { git = "https://github.com/blockprotocol/blockprotocol", rev = "542836" }
