[package]
name = "codegen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.26"
proc-macro2 = "1.0.56"
reqwest = "0.11.16"
serde_json = "1.0.96"
thiserror = "1.0.40"
error-stack = "0.3.1"
serde = { version = "1.0.160", features = ['derive'] }
petgraph = "0.6.3"

type-system = { git = "https://github.com/blockprotocol/blockprotocol", rev = "542836" }

[dev-dependencies]
similar-asserts = "1.4.2"

[[test]]
name = "harness"
test = false
