[package]
name = "parser"
description.workspace = true
readme.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
swc_ecma_parser.workspace = true
text-size = "1.1.1"
