[package]
name = "skeletor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo = "0.70.1"
error-stack = { version = "0.3.1", features = ['anyhow'] }

quote = "1.0.26"
proc-macro2 = "1.0.56"
syn = "2.0.15"

# Once stabilized move to 0.1.3, but we need the fully quantified paths
onlyerror = { git = "https://github.com/parasyte/onlyerror", default-features = false }

codegen = { path = "../codegen" }
