[package]
name = "turbine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.160", features = ['derive', 'alloc'], default-features = false }
serde_json = { version = "1.0.96", default-features = false, features = ['alloc'] }
error-stack = { version = "0.3.1", default-features = false }
time = { version = "0.3.20", features = ['serde'], default-features = false }
hashbrown = { version = "0.13.2", default-features = false, features = ["ahash", "serde"] }
uuid = { version = "1.3.1", features = ['serde'], default-features = false }

# Once stabilized move to 0.1.3, but we need the fully quantified paths
onlyerror = { git = "https://github.com/parasyte/onlyerror", default-features = false }

type-system = { git = "https://github.com/blockprotocol/blockprotocol", rev = "542836" }
